[package]
name    = "latch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "latch"
path = "src/main.rs"

[dependencies]
rayon      = "1.8"
reqwest    = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
anyhow     = "1.0"
clap       = { version = "4.0", features = ["derive"] }
chrono     = "0.4"
glob       = "0.3"
