[package]
name        = "latch-lang"
version     = "0.2.3"
edition     = "2021"
authors     = ["kaelvalen"]
description = "Latch — a minimal scripting language for local automation and tool orchestration"
license     = "MIT"
repository  = "https://github.com/kaelvalen/latch-lang"
homepage    = "https://github.com/kaelvalen/latch-lang"
readme      = "README.md"
keywords    = ["scripting", "automation", "language", "cli", "devops"]
categories  = ["command-line-utilities", "development-tools"]
exclude     = ["target/", "examples/error_test.lt", "examples/stop_test.lt", "examples/stop_fail.lt"]

[[bin]]
name = "latch"
path = "src/main.rs"

[dependencies]
rayon      = "1.8"
reqwest    = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde      = { version = "1.0", features = ["derive"] }
anyhow     = "1.0"
clap       = { version = "4.0", features = ["derive"] }
chrono     = "0.4"
glob       = "0.3"
